welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: Boolean(false) does not take parameters
    return false()
                ^